test/sema/negative/assign_no_lvalue.impala
fn main() -> () {
    17 = 5;
}
