test/sema/negative/assign_no_lvalue.out
assign_no_lvalue.impala:2 col 5 - 6: error: lvalue required for assignment
